refactor: stack -> deque로 변경